@@ -1,0 +1,21 @@
+package TestCase::Lib::SPVM::ArrayUtil {
+  use SPVM::ArrayUtil(joino);
+  use TestCase::Minimal;
+  
+  sub test_joino : int () {
+    
+    my $minimals = [
+      TestCase::Minimal->newp(1, 2),
+      TestCase::Minimal->newp(3, 4),
+      TestCase::Minimal->newp(5, 6)
+    ];
+    
+    my $join = joino(",", $minimals);
+    
+    if ($join eq "(1,2),(3,4),(5,6)") {
+      return 1;
+    }
+    
+    return 0;
+  }
+}
